--- a/_posts/2025-12-13-kube-vip.md
+++ b/_posts/2025-12-13-kube-vip.md
@@ -9,6 +9,9 @@ tags:
 image: "/assets/2025-12-13-kube-vip/kube-vip-logo.png"
 ---
 
+> 이 글에서는 학교 내부망의 네트워크 제약을 Kube-vip로 극복하고 단일 가상 IP(VIP) 기반의 무중단 K3s HA 클러스터를 구축한 과정에 대해 설명합니다.
+{: .prompt-info}
+
 ## 1. 개요
 
 제가 운영하고 있는 [코드플레이스](https://code.pusan.ac.kr)는 원래 한 대의 물리 서버에서 Docker Swarm 기반으로 운영되고 있습니다.
